api prefix removed from swagger
